# WiSense

./: .gitignore
backend/: README.md  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/api/v1/: router.py
backend/app/config/: settings.py
backend/app/core/: constants.py  logging.py
backend/app/database/: session.py
backend/app/discovery/: __init__.py  discovery_result.py  discovery_service.py
backend/app/models/: activity_log.py  capability.py  room.py  sensor.py  signalsample.py
backend/app/providers/: __init__.py  factory.py  registry.py
backend/app/providers/base/: base_provider.py
backend/app/providers/dataset/: provider.py
backend/app/providers/esp32/: provider.py
backend/app/providers/laptop/: provider.py
backend/app/realtime/: __init__.py  connection_manager.py  event_bus.py  notification_manager.py  realtime_service.py
backend/app/repositories/: activity_log_repository.py  base.py  capability_repository.py  connect_repository.py  dashboard_repository.py  health_repository.py  room_repository.py  sensor_repository.py  signalsample_repository.py
backend/app/schemas/: activity_log.py  capability.py  connect.py  dashboard.py  discovery.py  health.py  response.py  room.py  sensor.py  sensor_management.py  signalsample.py
backend/app/services/: activity_log_service.py  base.py  capability_service.py  connect_service.py  dashboard_service.py  health_service.py  room_service.py  sensor_service.py  signalsample_service.py
backend/tests/: test_connect_endpoint.py  test_health_endpoints.py
docs/: RUVIEW_ANALYSIS.md
(+45 files in other folders)
